--- a/quantumult-x/quantx.conf
+++ b/quantumult-x/quantx.conf
@@ -40,7 +40,7 @@ static=portal, Hong Kong, United States, img-url=paperplane.fill.system
 
 static=twitter, Hong Kong, Taiwan, United States, img-url=paperplane.system
 
-# static=clubhouse, Hong Kong, Taiwan, United States, img-url=paperplane.system
+static=clubhouse, Hong Kong, Taiwan, United States, img-url=paperplane.system
 
 static=Hong Kong, resource-tag-regex=IEPL, server-tag-regex=S11|S120
 
@@ -73,7 +73,7 @@ host-keyword, agora, clubhouse
 
 
 host-keyword, reuters, portal
-host-keyword, 23andme, Portal
+host-keyword, 23andme, portal
 
 host-keyword, speedtest, portal
 host-suffix, .edu, portal
