--- a/quantumult-x/sample-config.conf
+++ b/quantumult-x/sample-config.conf
@@ -2,29 +2,30 @@
 # Line started with ";" or "#" or "//" shall be comments.
 
 [general]
-excluded_routes = 10.0.0.0/8, 17.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16, 224.0.0.0/24
+excluded_routes = 10.0.0.0/8, 17.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16
+//224.0.0.0/4
 
-network_check_url = http://www.gstatic.com/generate_204
-server_check_url = http://www.gstatic.cn/generate_204
+//network_check_url = http://www.gstatic.com/generate_204
+server_check_url = http://www.gstatic.com/generate_204
 
 [dns]
 server=119.29.29.29
 server=119.28.28.28
 server=223.5.5.5
 server=223.6.6.6
+server=8.8.8.8
 server=1.1.1.1
-server=1.0.0.1
 
 [policy]
 static=portal, HK, JP, US, IEPL, img-url=paperplane.fill.system
 
-static=HK, resource-tag-regex=dler, server-tag-regex=香港, img-url=a.circle.fill.system
+static=HK, resource-tag-regex=service provider, server-tag-regex=港, img-url=a.circle.fill.system
 
-static=JP, resource-tag-regex=dler, server-tag-regex=日本, img-url=a.circle.fill.system
+static=JP, resource-tag-regex=service provider, server-tag-regex=日, img-url=a.circle.fill.system
 
-static=US, resource-tag-regex=dler, server-tag-regex=美国, img-url=a.circle.fill.system
+static=US, resource-tag-regex=service provider, server-tag-regex=美, img-url=a.circle.fill.system
 
-static=IEPL, resource-tag-regex=dler, server-tag-regex=IEPL, img-url=u.circle.fill.system
+static=IEPL, resource-tag-regex=service provider, server-tag-regex=IEPL, img-url=u.circle.fill.system
 
 //url-latency-benchmark=Latency, resource-tag-regex=IEPL, server-tag-regex=, check-interval=3600, tolerance=0
 
@@ -33,11 +34,10 @@ static=IEPL, resource-tag-regex=dler, server-tag-regex=IEPL, img-url=u.circle.fi
 [server_local]
 
 [filter_remote]
-https://raw.githubusercontent.com/ilhaformosa/shadowsocks-filters/main/quantumult-x/in-app-trackers.list, tag=in-app-trackers, force-policy=reject, update-interval=86400, opt-parser=false, enabled=true
-https://raw.githubusercontent.com/ilhaformosa/shadowsocks-filters/main/quantumult-x/clubhouse-udp.list, tag=clubhouse-udp, force-policy=direct, update-interval=86400, opt-parser=false, enabled=true
-https://raw.githubusercontent.com/ilhaformosa/shadowsocks-filters/main/quantumult-x/direct-rules.list, tag=direct, force-policy=direct, update-interval=86400, opt-parser=false, enabled=true
-https://raw.githubusercontent.com/ilhaformosa/shadowsocks-filters/main/quantumult-x/portal-rules.list, tag=portal, force-policy=portal, update-interval=86400, opt-parser=false, enabled=true
-https://raw.githubusercontent.com/ilhaformosa/shadowsocks-filters/main/quantumult-x/udp-rules.list, tag=udp, force-policy=IEPL, update-interval=86400, opt-parser=false, enabled=false
+https://raw.githubusercontent.com/ilhaformosa/shadowsocks-rules/main/quantumult-x/clubhouse-udp.list, tag=clubhouse-udp, force-policy=direct, update-interval=604800, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/ilhaformosa/shadowsocks-rules/main/quantumult-x/direct-rules.list, tag=direct-rules, force-policy=direct, update-interval=604800, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/ilhaformosa/shadowsocks-rules/main/quantumult-x/portal-rules.list, tag=portal-rules, force-policy=portal, update-interval=604800, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/ilhaformosa/shadowsocks-rules/main/quantumult-x/in-app-trackers.list, tag=in-app-trackers, force-policy=reject, update-interval=604800, opt-parser=false, enabled=true
 
 [filter_local]
 host-suffix, local, direct
@@ -47,10 +47,8 @@ ip-cidr, 100.64.0.0/10, direct
 ip-cidr, 127.0.0.0/8, direct
 ip-cidr, 172.16.0.0/12, direct
 ip-cidr, 192.168.0.0/16, direct
-ip-cidr, 224.0.0.0/24, direct
-host-suffix, cn, direct
-geoip, cn, direct
 
+geoip, cn, direct
 final, portal
 
 [rewrite_local]
