--- a/quantumult-x/sample-config.conf
+++ b/quantumult-x/sample-config.conf
@@ -2,17 +2,14 @@
 # Line started with ";" or "#" or "//" shall be comments.
 
 [general]
-excluded_routes = 10.0.0.0/8, 17.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16
-//224.0.0.0/4
+//excluded_routes = 10.0.0.0/8, 17.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16, 224.0.0.0/4
 
 //network_check_url = http://www.gstatic.com/generate_204
 server_check_url = http://www.gstatic.com/generate_204
 
 [dns]
 server=119.29.29.29
-server=119.28.28.28
 server=223.5.5.5
-server=223.6.6.6
 server=8.8.8.8
 server=1.1.1.1
 
@@ -42,13 +39,13 @@ https://raw.githubusercontent.com/ilhaformosa/shadowsocks-rules/main/quantumult-
 [filter_local]
 host-suffix, local, direct
 ip-cidr, 10.0.0.0/8, direct
-ip-cidr, 17.0.0.0/8, direct
 ip-cidr, 100.64.0.0/10, direct
 ip-cidr, 127.0.0.0/8, direct
 ip-cidr, 172.16.0.0/12, direct
 ip-cidr, 192.168.0.0/16, direct
-
 geoip, cn, direct
+
+ip-cidr, 17.0.0.0/8, portal
 final, portal
 
 [rewrite_local]
