--- a/quantumult-x/sample-config.conf
+++ b/quantumult-x/sample-config.conf
@@ -2,14 +2,19 @@
 # Line started with ";" or "#" or "//" shall be comments.
 
 [general]
-//excluded_routes = 10.0.0.0/8, 17.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16, 224.0.0.0/4
-
-//network_check_url = http://www.gstatic.com/generate_204
-server_check_url = http://www.gstatic.com/generate_204
+//excluded_routes = 10.0.0.0/8, 17.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.168.0.0/16, 224.0.0.0/4, 240.0.0.0/4, 255.255.255.255/32
+//192.0.2.0/24, 192.88.99.0/24, 198.51.100.0/24, 203.0.113.0/24, 239.255.255.250/32
+//network_check_url = http://cp.cloudflare.com/generate_204
+server_check_url = http://cp.cloudflare.com/generate_204
+server_check_timeout = 3000
 
 [dns]
-server=119.29.29.29
-server=223.5.5.5
+no-system
+no-ipv6
+prefer-doh3
+doh-server = https://dns.cloudflare.com/dns-query, https://dns.google/dns-query
+
+server=114.114.114.114
 server=8.8.8.8
 server=1.1.1.1
 
@@ -39,13 +44,20 @@ https://raw.githubusercontent.com/ilhaformosa/shadowsocks-rules/main/quantumult-
 [filter_local]
 host-suffix, local, direct
 ip-cidr, 10.0.0.0/8, direct
+ip-cidr, 17.0.0.0/8, direct
 ip-cidr, 100.64.0.0/10, direct
 ip-cidr, 127.0.0.0/8, direct
+ip-cidr, 169.254.0.0/16, direct
 ip-cidr, 172.16.0.0/12, direct
+ip-cidr, 192.0.0.0/24,  direct
 ip-cidr, 192.168.0.0/16, direct
+ip-cidr, 224.0.0.0/4, direct
+ip-cidr, 240.0.0.0/4, direct
+ip-cidr, 255.255.255.255/32, direct
+//192.0.2.0/24, 192.88.99.0/24, 198.51.100.0/24, 203.0.113.0/24, 239.255.255.250/32
+
 geoip, cn, direct
 
-ip-cidr, 17.0.0.0/8, portal
 final, portal
 
 [rewrite_local]
